content/guides/kubernetes-statefulset/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  serviceName: wordpress
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:fpm-alpine
        ports:
        - name: php-fpm
          containerPort: 9000
        volumeMounts:
        - name: dbdriver
          mountPath: /usr/src/wordpress/wp-content/db.php
          subPath: db.php
        - name: wordpress-configmap
          mountPath: /var/www/wp-config.php
          subPath: wp-config.php
        - name: database
          mountPath: /var/www/db
        - name: html
          mountPath: /var/www/html
      - name: nginx
        image: nginx:1.18-alpine
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: configmap
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: html
          mountPath: /var/www/html
      - name: litestream
        image: cablespaghetti/litestream:0.3.3
        volumeMounts:
        - name: database
          mountPath: /db
        - name: configmap
          mountPath: /etc/litestream.yml
          subPath: litestream.yml
        args:
        - replicate
        ports:
        - name: metrics
          containerPort: 9090
      volumes:
      - name: configmap
        configMap:
          name: litestream
      - name: dbdriver
        emptyDir: {}
      - name: wordpress-configmap
        configMap:
          name: wordpress
  volumeClaimTemplates:
  - metadata:
      name: database
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 100Mi
  - metadata:
      name: html
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 500Mi
